    upstream a long time ago.
  * Remove Suggests on gnome-screensaver. Screen locking is nowadays done by
    gnome-shell/gdm and gnome-settings-daemon no longer starts
    gnome-screensaver directly.
  * Remove Suggests on metacity | x-window-manager as gnome-settings-daemon no
    longer starts a window manager directly.

 -- Michael Biebl <biebl@debian.org>  Wed, 22 Jul 2015 12:46:02 +0200

gnome-settings-daemon (3.16.2-3) unstable; urgency=medium

  * Upload to unstable.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 14 Jun 2015 13:44:42 +0200

gnome-settings-daemon (3.16.2-2) experimental; urgency=medium

  * Bump Breaks: gnome-control-center to << 1:3.15.4 for the
    peripherals related schema changes.

 -- Andreas Henriksson <andreas@fatal.se>  Thu, 11 Jun 2015 16:00:15 +0200

gnome-settings-daemon (3.16.2-1) experimental; urgency=medium

  * New upstream release.
  * debian/control.in:
    + Update (build-)dependencies.
  * debian/patches/30_xrandr_dbus_init.patch,
    debian/patches/power-make-sure-to-set-an-error-when-GDBus-set_prope.patch:
    + Dropped, merged upstream.
  * debian/patches/04_superP.patch:
    + Updated for the new version.
  * Upload to experimental.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 31 May 2015 00:06:31 +0200

gnome-settings-daemon (3.14.2-3) unstable; urgency=medium

  * Team upload
  * power-make-sure-to-set-an-error-when-GDBus-set_prope.patch:
    set the error when a GDBus set_property callback fails
    (hopefully Closes: #775877)

 -- Simon McVittie <smcv@debian.org>  Mon, 09 Mar 2015 09:49:20 +0000

gnome-settings-daemon (3.14.2-2) unstable; urgency=medium

  * 01_reinstate_updates_plugin.patch: reinstate the “updates” plugin, 
    since gnome-software is not in jessie and we need an update 
    mechanism.
  * Use patch-translations.mk.
  * Reintroduce GNOME 3.12 translations.
  * Update packagekit-glib build-dependency.

 -- Josselin Mouette <joss@debian.org>  Thu, 04 Dec 2014 10:47:04 +0100
