@@ -58,12 +58,8 @@ Depends: ${shlibs:Depends},
          gsettings-desktop-schemas (>= 3.16),
          nautilus-data (>= 2.91.3-1)
 Recommends: pulseaudio
-Breaks: gnome-session (<< 2.24),
-        gnome-screensaver (<< 2.28.0),
-        gnome-color-manager (<< 3.0),
-        gnome-shell ( << 3.13.92),
-        gnome-control-center (<< 1:3.15.4),
-        gdm3 (<< 3.0)
+Breaks: gnome-shell ( << 3.13.92),
+        gnome-control-center (<< 1:3.15.4)
 Description: daemon handling the GNOME session settings
  This package contains the daemon which is responsible for setting the
  various parameters of a GNOME session and the applications that run
